@@ -35,8 +35,12 @@
   ;; usage: test:test-docs
   :test-docs {:override-deps {org.clojure/clojure {:mvn/version "1.11.1"}}
               :extra-paths ["target/test-doc-blocks/test"]
-              :main-opts ["-m" "cognitect.test-runner"
-                          "-d" "target/test-doc-blocks/test"]}
+              :exec-fn cognitect.test-runner.api/test
+              :exec-args {:dirs ["target/test-doc-blocks/test"]}
+              :org.babashka/cli {:coerce {:nses [:symbol]
+                                          :patterns [:string]
+                                          :vars [:symbol]}}
+              :main-opts ["-m" "babashka.cli.exec"]}
 
   ;; for consistent linting we use a specific version of clj-kondo through the jvm
   :clj-kondo {:extra-deps {clj-kondo/clj-kondo {:mvn/version "2023.03.17"}}
